[project]
name = "moltbolt-scanner"
version = "0.1.0"
description = "OpenClaw/Moltbot installation detection and analysis tool"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pylint>=3.0", "mypy>=1.0"]

[project.scripts]
moltbolt-scanner = "openclaw_usage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "openclaw_usage.py",
    "structures.py",
    "platform_compat/*.py",
]

[tool.pylint.messages_control]
disable = ["line-too-long", "too-many-locals", "too-many-branches"]
